--- a/index.html
+++ b/index.html
@@ -13,27 +13,39 @@
     <main>
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="GET" action="results.html">
-            <div>
+            <div><span class="required-field">*</span>
                 <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <input type="text" id="firstname" name="firstname" minlength="2" maxlength="35"required>
+                <span class="required-field">*</span>
                 <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
-            </div>
-            <fieldset>
+                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35"required>
+                <span class="required-field">*</span>
+                <label for="age">Your Age</label>
+                <input type="number" name="age" id="age" min="21" max="120"required>
+                <h5>age 21 or older to enter the contest</h5>
+
+                </div>
                 <legend>Your Contact Info</legend>
                 <div>
+                    <span class="required-field">*</span>
                     <label for="email">Your Email</label>
-                    <input type="email" id="email" name="email">
+                    <input type="email" id="email" name="email" required>
+                    <span class="required-field">*</span>
+                    <label for="password"> Your Password</label>
+                    <input type="password" id="password" name="password" pattern="[0-9a-zA-Z]{6}" title="6 Alphanumeric charater Passcode" required> 
                 </div>
                 <div>
+                    <span class="required-field">*</span>
                     <label for="address">Your Street Address</label>
-                    <input type="text" id="address" name="address">
+                    <input type="text" id="address" name="address"required>
                 </div>
                 <div>
+                    <span class="required-field">*</span>
                     <label for="city">Your City</label>
-                    <input type="text" id="city" name="city">
+                    <input type="text" id="city" name="city"required>
+                    <span class="required-field">*</span>
                     <label for="state">Your State</label>
-                    <input list="state-list" id="state" name="state">
+                    <input list="state-list" id="state" name="state"required>
                     <datalist id="state-list">
                         <option value="AK">Alaska</option>
                         <option value="AL">Alabama</option>
@@ -85,8 +97,9 @@
                         <option value="WV">West Virginia</option>
                         <option value="WY">Wyoming</option>
                     </datalist>
+                    <span class="required-field">*</span>
                     <label for="zip">Your Zipcode</label>
-                    <input type="text" id="zip" name="zip">
+                    <input type="text" id="zip" name="zip" pattern="[0-9]{5}" title="5-digit US ZIP code"required>
                 </div>
             </fieldset>
 
